# ba_camera_bridge

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
config/: gripper_camera.yaml  overview_camera.yaml  overview_camera_info.yaml
launch/: all_cameras.launch.py  gripper_camera.launch.py  overview_camera.launch.py
scripts/: deploy_ubuntu1.sh  install_service.sh
systemd/: ba-camera-bridge.service
